# cmake-sample

./: .travis.yml  CMakeLists.txt  README.md  configure.sh
TestWrapper/: CMakeLists.txt
TestWrapper/src/: TestWrapper.cpp
build_linux/: CMakeCache.txt
cpprestsdk-1.2.0/: CMakeLists.txt  README.md
cpprestsdk-2.8.0/Build_android/: configure.sh
cpprestsdk-2.8.0/Build_android/openssl/: Makefile
cpprestsdk-2.8.0/Release/: CMakeLists.txt
cpprestsdk-2.8.0/Release/include/cpprest/details/: SafeInt3.hpp  x509_cert_utilities.h
cpprestsdk-2.8.0/Release/src/http/client/: http_client_asio.cpp
cpprestsdk-2.8.0/Release/src/pch/: stdafx.h
cpprestsdk-2.8.0/Release/src/utilities/: asyncrt_utils.cpp
gloox-1.0.17/: CMakeLists.txt  config.h.unix
gloox-1.0.17/src/: config.h
wrapper/: CMakeLists.txt
wrapper/src/: Wrapper.cpp  Wrapper.h  core.cpp  core.h
